# full_stack_weather_agent

./: README.md  vercel.json
app/: .dockerignore  .env  Dockerfile  pyproject.toml  requirements.txt
app/src/app/: __init__.py  agent.py  config.py  database.py  init_db.py  logger.py  main.py  models.py  schema.py  weather_agent.db
app/src/app/tools/: weather_tool.py
frontend/my-app/: package.json  tsconfig.json
frontend/my-app/src/app/: globals.css  page.tsx
frontend/my-app/src/components/ui/: ChatBox.tsx  button.tsx  card.tsx  input.tsx
