[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rehan Ahmed", email = "rehan007313@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
