[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rehan Ahmed", email = "rehan007313@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "openai-agents>=0.4.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
